--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,6 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/club_list">
-
-    </android.support.v7.widget.RecyclerView>
+        android:id="@+id/club_list"/>
 
 </RelativeLayout>
